# image-cnn-transformers

./: .gitignore  README.md  pyproject.toml
configs/: README.md  base.yaml  convnext_t_pretrained.yaml  convnext_t_scratch.yaml  deit_s_pretrained.yaml  deit_s_scratch.yaml  resnet50_pretrained.yaml  resnet50_scratch.yaml  sweep.yaml  vit_b16_pretrained.yaml  vit_b16_scratch.yaml
data/: dataset_stats.json  subset_stats.json
data/subsets/: frac0.05_seed123.npy  frac0.05_seed42.npy  frac0.05_seed456.npy  frac0.10_seed123.npy  frac0.10_seed42.npy  frac0.10_seed456.npy  frac0.20_seed123.npy  frac0.20_seed42.npy  frac0.20_seed456.npy  frac0.50_seed123.npy  frac0.50_seed42.npy  frac0.50_seed456.npy  frac1.00_seed42.npy
literature/: ai-execution-report.md  conceptual_architectures.md  convert.sh  doi.md  papers.yaml  report_pretraining_and_augmentation.md  report_vit_vs_cnn_data_efficiency.md
literature/md/: dai2021coatnet.md  dascoli2021convit.md  dosovitskiy2021vit.md  he2016resnet.md  kolesnikov2020bit.md  liu2021swin.md  liu2022convnext.md  lu2022bridging.md  mauricio2023survey.md  raghu2021dovit.md  simonyan2015vggnet.md  steiner2022trainvit.md  tan2019efficientnet.md  touvron2021deit.md  xiao2021earlyconv.md  yuan2021t2tvit.md
plans/: 2026-02-16-citation-crawl-v2.md  2026-02-16-citation-crawl.md  2026-03-22-m2-implementation.md
reports/: 1.tex
scripts/: README.md  aggregate_results.py  create_subsets.py  download_weights.sh  launch_sweep.py  make_figures.py  train.py  verify_dataset.py
slurm/: README.md  m2_baselines.sh  sweep_array.sh  train_single.sh
(+22 files in other folders)
